Improved Mobile responsiveness and design for Recipe Detail page. Improved margins on tablet size screens. Fixed bug in recipe header that forced it off the page in extra small screens.

--- a/src/styles/RecipeDetails.css
+++ b/src/styles/RecipeDetails.css
@@ -113,7 +113,7 @@
 }
 
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
   .recipeInfoContainer {
     display: flex;
     flex-direction: column;
@@ -125,6 +125,10 @@
   .detail-section h2 {
     margin-bottom: 1rem;
     margin-top: 3rem;
+    margin-left: 0;
+    margin-right: 0;
+    padding: 0;
+    text-align: center;
     width: 100%;
   }
 
@@ -160,7 +164,7 @@
 }
 
 
-@media screen and (min-width: 950px) and (max-width: 1200px) {
+@media screen and (min-width: 801px) and (max-width: 1200px) {
   .recipeInfoContainer {
     display: flex;
     flex-direction: row;
